--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "web3modal": "^1.9.8"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
